# loan-processsing-system

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pyrightconfig.json  selected-transactions.csv  start_api.sh  start_frontend.sh
.github/workflows/: ci.yml
api/: api_router.py  app.py
api/resources/: documents.py  insights.py
domain/: __init__.py  bank_statement.py  categories.py  categories_d.py  document_d.py  statement_d.py  underwriting_d.py
extractor/: __init__.py  base_extractor.py  statement_extractor.py  statement_metadata_extractor.py  transaction_categorization_extractor.py  transaction_extractor.py
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: CombinedTransactionsDialog.js  DocumentDetail.js  DocumentInsights.js  DocumentList.js  SelectedInsightsPage.js  SelectedTransactionsPage.js  TransactionTable.js  Upload.js
frontend/src/services/: api.js
llm_handler/: models.py
pipeline/: __init__.py  pipeline.py
services/: __init__.py  cash_flow_analysis_service.py  debt_analysis_service.py  liquidity_analysis_service.py  reconciliation_service.py  recurring_bills_service.py  risk_flags_service.py  risk_model.py  stability_analysis_service.py  transaction_bucket_service.py  transaction_categorization_service  underwriting_metrics_service_v2.py
storage/: document_dao.py
tests/domain/: test_categories_d.py  test_document_d.py  test_statement_d.py
tests/services/: test_reconciliation_service.py
utils/: converters.py  format.py  json_fns.py
