[project]
name = "bank-processing-system"
version = "0.0.0"
description = "Bank Document Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.76.3",
]

[tool.ruff]
# Python version used for parsing and rule selection
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PL",  # pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    # Soften some opinionated rules initially; we can tighten later
    "E501",   # Line length handled by formatter
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.isort]
known-first-party = [
    "domain",
    "extractor",
    "pipeline",
    "utils",
    "llm_handler",
]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
# Match previous mypy behavior where third-party stubs may be missing
reportMissingImports = "none"
reportUnreachable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnnecessaryCast = "warning"
useLibraryCodeForTypes = true

# Per-module overrides can be configured later as needed

# Dev dependencies will be managed by uv using a dev group.
[tool.uv]
dev-dependencies = [
    "ruff",
    "pyright",
    "pre-commit",
]
